# thermos

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  build-bundled.sh  build-no-sqlite.sh  build-static.sh  changelog.md  readme.md
.github/workflows/: alpine.yml  alpine_arm.yml  build-clang.yml  build-gcc.yml  build-msvc.yml  clang.yml  debian.yml  gcc.yml  msvc.yml  msys2.yml
ci/: 01-install-dependencies.sh  02-create-package.sh
cmake/: sqlite3-config.cmake
debian/: changelog  control  copyright  thermos.install  watch
documentation/: msys2-build.md  third-party.md
lib/: device.hpp  device_reading.cpp  device_reading.hpp  read.cpp  read.hpp  read_thermal_linux.cpp  read_thermal_linux.hpp  read_thermal_windows.hpp  reading_base.cpp  reading_base.hpp  reading_type.cpp  reading_type.hpp
lib/load/: calculator.cpp  calculator.hpp  read.cpp  read.hpp  read_linux.cpp  read_linux.hpp  read_windows.cpp  read_windows.hpp  reading.cpp  reading.hpp
lib/sqlite/: database.cpp  database.hpp  statement.hpp
lib/storage/: csv.cpp  csv.hpp  db.cpp  db.hpp  factory.hpp  retrieve.hpp  store.hpp  utilities.cpp  utilities.hpp
lib/templating/: htmlspecialchars.cpp  htmlspecialchars.hpp  template.cpp  template.hpp  vectorize.cpp  vectorize.hpp
lib/thermal/: read.cpp  read.hpp  read_linux.cpp  read_linux.hpp  read_windows.cpp  read_windows.hpp  reading.cpp  reading.hpp
src/: CMakeLists.txt  ReturnCodes.hpp  Version.cpp  Version.hpp
src/db2csv/: CMakeLists.txt  db2csv.cpp  db2csv.hpp  main.cpp  readme.md  thermos-db2csv.cbp
src/graph-generator/: CMakeLists.txt  generate_traces.hpp  generator.cpp  generator.hpp  graph.tpl  main.cpp  readme.md  template.cpp  template.hpp  thermos-graph-generator.cbp
src/info/: CMakeLists.txt  main.cpp  readme.md  thermos-info.cbp
src/lib/: device.cpp  device.hpp  device_reading.cpp  device_reading.hpp  read.cpp  read.hpp  read_linux.cpp  read_linux.hpp  read_thermal_linux.hpp  read_thermal_windows.cpp  read_thermal_windows.hpp  read_windows.cpp  read_windows.hpp
src/lib/sqlite/: database.cpp  database.hpp  statement.cpp  statement.hpp
src/lib/storage/: db.cpp  db.hpp  factory.cpp  store.hpp  type.cpp  type.hpp  utilities.cpp  utilities.hpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  main.cpp  readme.md  thermo-logger.cbp  thermos-logger.cbp
src/thermo-cli/: CMakeLists.txt  main.cpp  thermo-cli.cbp
src/thermo-info/: CMakeLists.txt  main.cpp  readme.md  thermo-info.cbp
src/util/: GitInfos.hpp  GitInfos.template.cpp
tests/: CMakeLists.txt
tests/components/: CMakeLists.txt  component-tests.cbp  device.cpp  device_reading.cpp  find_catch.hpp  main.cpp  reading_type.cpp
tests/components/graph-generator/: generator.cpp
tests/components/load/: device_reading.cpp  reading.cpp
tests/components/sqlite/: database.cpp  statement.cpp
tests/components/storage/: csv.cpp  db.cpp  factory.cpp  to_time.cpp  to_time.hpp  type.cpp  utilities.cpp
tests/components/templating/: htmlspecialchars.cpp  template.cpp  vectorize.cpp
tests/components/thermal/: device_reading.cpp  reading.cpp
tests/db2csv/: CMakeLists.txt  conversion-failure.cmd  conversion-failure.sh  missing-file.cmd  missing-file.sh  parameter-misuse-file.cmd  parameter-misuse-file.sh  unknown-parameter.cmd  unknown-parameter.sh
tests/graph-generator/: CMakeLists.txt  parameter-misuse-file.cmd  parameter-misuse-file.sh  parameter-misuse-output.cmd  parameter-misuse-output.sh  parameter-misuse-template.cmd  parameter-misuse-template.sh  unknown-parameter.cmd  unknown-parameter.sh
tests/logger/: CMakeLists.txt  logging-failure.cmd  logging-failure.sh  missing-logfile.cmd  missing-logfile.sh  parameter-misuse-file.cmd  parameter-misuse-file.sh  parameter-misuse-type.cmd  parameter-misuse-type.sh  unknown-parameter.cmd  unknown-parameter.sh
